--- a/src/webrtc/signalserver/codelab/index.html
+++ b/src/webrtc/signalserver/codelab/index.html
@@ -44,7 +44,7 @@
             <div class="card-header">
               Logs
             </div>
-            <div class="div.a">
+            <div class="card-block">
               <pre id="webrtc-logs"></pre>
             </div>
           </div>
@@ -56,6 +56,8 @@
 
   <!-- This file is automatically added/served when running "node index.js". -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <script src="js/main.js"></script>
