--- a/src/sfu/signalserver/index.html
+++ b/src/sfu/signalserver/index.html
@@ -99,15 +99,15 @@
   <script src="js/sdpUnifiedPlanUtils.js" async  ></script>
   <script src="js/transport.js" async  ></script>
   <script src="js/commonUtils.js" async  ></script>
-  <script src="js/producer.js" async  ></script>
-  <script src="js/consumer.js" async  ></script>
-  <script src="js/handler.js" async  ></script>
+<!--   <script src="js/handler.js" async  ></script> -->
   <script src="js/remoteSdp.js" async  ></script>
   <script src="js/ortc.js" async  ></script>
   <script src="js/grammar.js" async  ></script>
   <script src="js/sdpparser.js" async  ></script>
   <script src="js/start.js" async  ></script>
   <script src="js/main.js" async></script>
+<!--   <script src="js/producer.js" async  ></script>
+  <script src="js/consumer.js" async  ></script> -->
 
  <!-- <script type="text/javascript" src="app-bundle.js"></script> -->
 
