--- a/src/sfu/sdpapp/index.html
+++ b/src/sfu/sdpapp/index.html
@@ -74,7 +74,9 @@
       <td>
         <fieldset id="fs_subscribe" >
           <legend>Subscription</legend>
-          <div><button id="btn_subscribe">Subscribe</button> <span id="sub_status"></span></div>
+          <div><button id="btn_subscribe">Subscribe</button> <span id="sub_status"></span>
+          <div><button id="btn_subscribe_resume">Start</button> <span id="sub_status"></span>
+          </div>
         </fieldset>
       </td>
     </tr>
