--- a/src/sfu/sdpapp/index.html
+++ b/src/sfu/sdpapp/index.html
@@ -97,15 +97,15 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 
-  <script src="js/MediaSection.js" async  ></script>
+<!--   <script src="js/MediaSection.js" async  ></script>
   <script src="js/sdpUnifiedPlanUtils.js" async  ></script>
   <script src="js/transport.js" async  ></script>
   <script src="js/commonUtils.js" async  ></script>
-<!--   <script src="js/handler.js" async  ></script> -->
+  <script src="js/handler.js" async  ></script>
   <script src="js/remoteSdp.js" async  ></script>
   <script src="js/ortc.js" async  ></script>
   <script src="js/grammar.js" async  ></script>
-  <script src="js/sdpparser.js" async  ></script>
+  <script src="js/sdpparser.js" async  ></script> -->
   <script src="js/start.js" async  ></script>
   <script src="js/main.js" async></script>
 <!--   <script src="js/producer.js" async  ></script>
