added pause and resume button

--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -75,7 +75,8 @@
         <fieldset id="fs_subscribe" >
           <legend>Subscription</legend>
           <div><button id="btn_subscribe">Subscribe</button> <span id="sub_status"></span>
-          <div><button id="btn_subscribe_resume">Start</button> <span id="sub_status"></span>
+            <div><button id="btn_subscribe_pause">Pause</button> <span id="sub_status"></span>
+          <div><button id="btn_subscribe_resume">Resume</button> <span id="sub_status"></span>
           </div>
         </fieldset>
       </td>
@@ -97,19 +98,7 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 
-<!--   <script src="js/MediaSection.js" async  ></script>
-  <script src="js/sdpUnifiedPlanUtils.js" async  ></script>
-  <script src="js/transport.js" async  ></script>
-  <script src="js/commonUtils.js" async  ></script>
-  <script src="js/handler.js" async  ></script>
-  <script src="js/remoteSdp.js" async  ></script>
-  <script src="js/ortc.js" async  ></script>
-  <script src="js/grammar.js" async  ></script>
-  <script src="js/sdpparser.js" async  ></script> -->
   <script src="js/start.js" async  ></script>
   <script src="js/main.js" async></script>
-<!--   <script src="js/producer.js" async  ></script>
-  <script src="js/consumer.js" async  ></script> -->
-
 
 </html>
