--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -98,7 +98,7 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 
-  <script src="js/start.js" async  ></script>
-  <script src="js/main.js" async></script>
+  <script src="js/main.js" async  ></script>
+  <script src="js/webrtc.js" async></script>
 
 </html>
