added audio level

--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -41,6 +41,9 @@
       <td>
         <div>Local</div>
         <video id="local_video" controls autoplay playsinline></video>
+
+        <span id="camera-producer-stats" class="track-ctrl"></span>
+        
       </td>
       <td>
         <div>Remote</div>
@@ -68,6 +71,12 @@
           <div>
             <button id="btn_screen">Share Screen</button>
             <span id="screen_status"></span>
+          </div>
+           <div>
+            <button id="btn_audio_level">Audio Level</button>
+          </div>
+           <div>
+            <button id="btn_stats">Stats</button>
           </div>
         </fieldset>
       </td>
