--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -76,7 +76,7 @@
             <button id="btn_audio_level">Audio Level</button>
           </div>
            <div>
-            <button id="btn_stats">Stats</button>
+            <button id="btn_producer_stats">Stats</button>
           </div>
         </fieldset>
       </td>
