--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -99,9 +99,10 @@
       <td>
         <fieldset id="fs_subscribe" >
           <legend>Subscription</legend>
-          <div><button id="btn_subscribe">Subscribe</button> <span id="sub_status"></span>
+            <div><button id="btn_subscribe">Subscribe</button> <span id="sub_status"></span>
             <div><button id="btn_subscribe_pause">Pause</button> <span id="sub_status"></span>
-          <div><button id="btn_subscribe_resume">Resume</button> <span id="sub_status"></span>
+            <div><button id="btn_subscribe_resume">Resume</button> <span id="sub_status"></span>
+            <div><button id="btn_subscribe_stats">stats</button> <span id="sub_status"></span>
           </div>
         </fieldset>
       </td>
