fixed broken ortc

--- a/src/sfu/ortcAPP/index.html
+++ b/src/sfu/ortcAPP/index.html
@@ -40,11 +40,11 @@
     <tr>
       <td>
         <div>Local</div>
-        <audio id="local_video" controls autoplay ></video>
+        <video id="local_video" controls autoplay playsinline></video>
       </td>
       <td>
         <div>Remote</div>
-        <audio id="remote_video" controls autoplay ></video>
+        <video id="remote_video" controls autoplay playsinline></video>
       </td>
     </tr>
   </table>
