--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -40,11 +40,13 @@
     <tr>
       <td>
         <div>Local</div>
-        <video id="local_video" controls autoplay playsinline></video>
+<!--        <video id="local_video" controls autoplay playsinline></video>-->
+        <div id="local_video"> </div>
       </td>
       <td>
         <div>Remote</div>
-        <video id="remote_video" controls autoplay playsinline></video>
+<!--        <video id="remote_video" controls autoplay playsinline></video>-->
+         <div id="remote_video"> </div>
       </td>
     </tr>
     <tr>
