screen sharing working

--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -44,9 +44,14 @@
         <div id="local_video"> </div>
       </td>
       <td>
-        <div>Remote</div>
+        <div>Remote1</div>
 <!--        <video id="remote_video" controls autoplay playsinline></video>-->
-         <div id="remote_video"> </div>
+         <div id="remote_video1"> </div>
+      </td>
+      <td>
+        <div>Remote2</div>
+        <!--        <video id="remote_video" controls autoplay playsinline></video>-->
+        <div id="remote_video2"> </div>
       </td>
     </tr>
     <tr>
