--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -83,7 +83,7 @@
       <td>
         <fieldset id="fs_publish">
           <legend>Publishing</legend>
-          <div><label><input type="checkbox" id="chk_simulcast"> Use Simulcast</label></div>
+          <div><label><input type="checkbox" id="chk_simulcast" checked> Use Simulcast</label></div>
           <div><label><input type="checkbox" id="chk_audio" checked> audio</label></div>
           <div><label><input type="checkbox" id="chk_video" checked> video</label></div>
           <div>
