--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -37,22 +37,7 @@
 </style>
 <body>
   <table>
-    <tr id="TRSubscribe">
-      <td>
-        <div id="divPeerid"></div>
-<!--        <video id="local_video" controls autoplay playsinline></video>-->
-        <div id="local_video"> </div>
-      </td>
-<!--      <td>-->
-<!--        <div>Remote1</div>-->
-<!--&lt;!&ndash;        <video id="remote_video" controls autoplay playsinline></video>&ndash;&gt;-->
-<!--         <div id="remote_video1"> </div>-->
-<!--      </td>-->
-<!--      <td>-->
-<!--        <div>Remote2</div>-->
-<!--        &lt;!&ndash;        <video id="remote_video" controls autoplay playsinline></video>&ndash;&gt;-->
-<!--        <div id="remote_video2"> </div>-->
-<!--      </td>-->
+    <tr id="traddCtrl">
     </tr>
     <tr>
       <td>
@@ -83,7 +68,7 @@
       <td>
         <fieldset id="fs_publish">
           <legend>Publishing</legend>
-          <div><label><input type="checkbox" id="chk_simulcast" checked> Use Simulcast</label></div>
+          <div><label><input type="checkbox" id="chk_simulcast" > Use Simulcast</label></div>
           <div><label><input type="checkbox" id="chk_audio" checked> audio</label></div>
           <div><label><input type="checkbox" id="chk_video" checked> video</label></div>
           <div>
