Fixed bugs- MultiParty conference

--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -37,7 +37,9 @@
 </style>
 <body>
   <table>
-    <tr id="traddCtrl">
+    <tr id="traddCtrl1">
+    </tr>
+    <tr id="traddCtrl2">
     </tr>
     <tr>
       <td>
