check for faulty sdp, missing msid

--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -72,7 +72,7 @@
           <legend>Publishing</legend>
           <div><label><input type="checkbox" id="chk_simulcast" > Use Simulcast</label></div>
           <div><label><input type="checkbox" id="chk_audio" checked> audio</label></div>
-          <div><label><input type="checkbox" id="chk_video" checked> video</label></div>
+          <div><label><input type="checkbox" id="chk_video" > video</label></div>
           <div>
             <button id="btn_webcam">Start Webcam</button>
             <span id="webcam_status"></span>
