added network performance Score

--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -61,6 +61,26 @@
     <td> 
         <div id="divParticipants"></div>
     </td>
+    <td> 
+      <tr>
+        <td> 
+          Prodcucer Score[0-10]:
+        </td>
+        <td> 
+        <div id="divProducerScore">10</div>
+        </td>
+      </tr>
+       <tr>
+        <td> 
+          Consumer Score[0-10]:
+        </td>
+        <td> 
+        <div id="divConsumerScore">10</div>
+        </td>
+       </tr>
+       
+    </td>
+
     </tr>
      <tr id="traddCtrl1">
     </tr>
