Enabled transport-cc

--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -82,9 +82,9 @@
     </td>
 
     </tr>
-     <tr id="traddCtrl1">
-    </tr>
-    <tr id="traddCtrl2">
+    <tr>
+      <td id="traddCtrl1"></td>
+      <td id="traddCtrl2"></td>
     </tr>
     <tr>
       <td>
