--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -34,6 +34,17 @@
   span {
     font-family: monospace;
   }
+
+
+  .mystyle {
+  
+  border-left: 6px solid green;
+  height: 1px;
+  left: 50%;
+  margin-left: -3px;
+  top: 0;
+  
+  }
 </style>
 <body>
   <table>
@@ -83,6 +94,7 @@
 
     </tr>
     <tr>
+      <td id="traddCtrl0"></td>
       <td id="traddCtrl1"></td>
       <td id="traddCtrl2"></td>
     </tr>
