--- a/src/sfu/webRTCApp/test/pagination.html
+++ b/src/sfu/webRTCApp/test/pagination.html
@@ -79,8 +79,12 @@
 </style>
 </head>
 <body>
+<div id="video1"></div>
 
+<!-- <video id="myVideo" controls>
+  <source src="http://tecfa.unige.ch/guides/html/html5-video/videos/state-of-wikipedia-480x272.mp4">
 
+</video> -->
 
 <img src="speaker1.png" id="myImg">
  <button onclick="myImage()">Try it</button>
@@ -92,6 +96,19 @@
 <p id="demo"></p>
 
 <script>
+
+var videoPlayerElement = document.createElement('video');
+videoPlayerElement.src = 'http://tecfa.unige.ch/guides/html/html5-video/videos/state-of-wikipedia-480x272.mp4'
+videoPlayerElement.width = "320";
+videoPlayerElement.height = "240";
+videoPlayerElement.controls= true;
+ videoPlayerElement.autoplay = true;
+videoPlayerElement.load();
+
+
+
+//document.getElementById('video1').innerHTML = videoPlayerElement.outerHTML;
+
 
 function myImage() {
   document.getElementById("myImg").src = "speaker.png";
@@ -125,16 +142,12 @@ function myFunction() {
 
 
 var objJson = [
-    { adName: "AdName 1"},
-    { adName: "AdName 2"},
-    { adName: "AdName 3"},
-    { adName: "AdName 4"},
-    { adName: "AdName 5"},
-    { adName: "AdName 6"},
-    { adName: "AdName 7"},
-    { adName: "AdName 8"},
-    { adName: "AdName 9"},
-    { adName: "AdName 10"}
+    { adName:  videoPlayerElement.outerHTML},
+    { adName:  videoPlayerElement.outerHTML},
+    { adName:  videoPlayerElement.outerHTML},
+    { adName:  videoPlayerElement.outerHTML},
+    { adName:  videoPlayerElement.outerHTML},
+
 ]; // Can be obtained from another source, such as your objJson variable
 
 function prevPage()
@@ -167,7 +180,7 @@ function changePage(page)
     listing_table.innerHTML = "";
 
     for (var i = (page-1) * records_per_page; i < (page * records_per_page); i++) {
-        listing_table.innerHTML += "<div class=\"box\"> " + i + "</div>";
+        listing_table.innerHTML += "<div class=\"box\"> " + objJson[i].adName + "</div>";
         //listing_table.innerHTML += "<td><div>" + objJson[i].adName + "</div></td>";
         //listing_table.innerHTML += "<div class=\"box\"> <div>" + i + "</div></div>";
     }
