fixed close button issues

--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -69,16 +69,20 @@
 }
 
 
-  .mystyle {
+/*  .mystyle {
   
   border-left: 6px solid green;
-  height: 1px;
+  width: 1px;
   left: 50%;
   margin-left: -3px;
   top: 0;
   
-  }
+  }*/
 
+hr.new4 {
+  border: 1px solid red;
+  width: 1px;
+}
     
  
 
@@ -123,7 +127,7 @@
 <table border="0" cellpadding="0">
 <tbody>
 <tr style="background-color: #1ffff0;">
-<th style="text-align: center; vertical-align: middle;" colspan="3">&nbsp; &nbsp;ScopeAr Worklink Router</th>
+<th style="text-align: center; vertical-align: middle;" colspan="3">&nbsp; &nbsp;Augmented Reality Worklink Router</th>
 </tr>
 <tr style="background-color: #f9ecf2;">
 <td colspan="3">
