removed the box size

--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -45,8 +45,8 @@
 }
 
 .box {
-  width: 250px;
-  height: 250px;
+  /*width: 250px;
+  height: 350px;*/
   background-color: lightblue;
   margin: 1px;
   /*line-height: 300px;*/
