--- a/src/broadcast/signalserver/codelab/index.html
+++ b/src/broadcast/signalserver/codelab/index.html
@@ -33,7 +33,7 @@
 
       <div class="row">
         <div class="col">
-         <video id="localVideo" autoplay muted playsinline></video>
+        <!--  <video id="localVideo" autoplay muted playsinline></video> -->
          <video id="remoteVideo" autoplay playsinline></video>
         </div>
       </div>
