--- a/src/broadcast/signalserver/codelab/index.html
+++ b/src/broadcast/signalserver/codelab/index.html
@@ -34,7 +34,7 @@
       <div class="row">
         <div class="col">
         <!--  <video id="localVideo" autoplay muted playsinline></video> -->
-         <video id="remoteVideo" autoplay playsinline></video>
+         <video id="remoteVideo" autoplay playsinline controls></video>
         </div>
       </div>
       <div class="row">
