Added mute button

--- a/src/broadcast/signalserver/codelab/index.html
+++ b/src/broadcast/signalserver/codelab/index.html
@@ -37,6 +37,7 @@
          <video id="remoteVideo" autoplay playsinline controls></video>
         </div>
       </div>
+      <div class="row">Mute: <input type="checkbox" id="checkmute" onclick="onMuteClick()"> </div>
       <div class="row">
         <div class="col">
           <div class="card">
