removed worklink comments

--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -127,7 +127,7 @@ hr.new4 {
 <table border="0" cellpadding="0">
 <tbody>
 <tr style="background-color: #1ffff0;">
-<th style="text-align: center; vertical-align: middle;" colspan="3">&nbsp; &nbsp;Augmented Reality Worklink Router</th>
+<th style="text-align: center; vertical-align: middle;" colspan="3">&nbsp; &nbsp;SFU Router</th>
 </tr>
 <tr style="background-color: #f9ecf2;">
 <td colspan="3">
@@ -275,7 +275,7 @@ hr.new4 {
 
 
 <tr style="background-color: #f9ecf2;">
-<td colspan="3"> Worklink rounter is a SFU, which route Augmented VR contents. It supports Android and IOS devices. It helps in rapid diagnostics of Worklink. Also in audio and video conference<br> If you need access of this server, please contant Brent or Arvind <td>
+<td colspan="3"> SFU Router. Please contant Arvind Umrao<akumrao@yahoo.com> for more informaion <td>
   
 
 </tr>  
