sctp not working

--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -178,6 +178,12 @@ hr.new4 {
           <div>
             <button id="btn_screen">Share Screen</button>
           </div>
+          <div>
+            <button id="btn_datachannel">Start DataChannel</button>
+             <input type="text" id="dataInput" maxlength="240" size="40" />
+            <button id="btn_datasend">Send</button>
+          </div>
+
            
 <!--            <div><button id="btn_subscribe_pause">Pause</button> <span id="sub_status"></span>-->
 <!--            <div><button id="btn_subscribe_resume">Resume</button> <span id="sub_status"></span>-->
