--- a/src/broadcast/signalserver/client-datachannel/index.html
+++ b/src/broadcast/signalserver/client-datachannel/index.html
@@ -59,7 +59,7 @@
   <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+  <script src="adapter.js"></script>
   <script src="js/main.js"></script>
 
 </body>
