--- a/src/broadcast/signalserver/client-datachannel/index.html
+++ b/src/broadcast/signalserver/client-datachannel/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>Realtime communication with WebRTC</title>
+  <title>Fmp4 Buffered communication with WebRTC Data Channel.</title>
 
   <link rel="stylesheet" href="/css/main.css" />
 
@@ -11,7 +11,7 @@
 
 <body>
 
-  <h1>Realtime communication with WebRTC</h1>
+  <h1>Buffered communication with WebRTC Data Channel. Fragmented and segmented mp4 Boxed with AAC/Mp3 and H264 </h1>
 
    <script>
 
@@ -28,13 +28,13 @@
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <strong>Live Streaming!</strong> WebRTC video feed for webrtcstreamer</code> sample.
+        <strong>Fmp4 Bufferd Streaming!</strong> Youtube like communication with WebRTC</code> sample.
       </div>
 
       <div class="row">
         <div class="col">
         <!--  <video id="localVideo" autoplay muted playsinline></video> -->
-         <video id="remoteVideo" muted playsinline controls></video>
+         <video id="remoteVideo"  playsinline controls></video>
         </div>
       </div>
       <div class="row">Mute: <input type="checkbox" id="checkmute" onclick="onMuteClick()"> </div>
