changes at test script

--- a/src/http/script/websocket/wesocket.html
+++ b/src/http/script/websocket/wesocket.html
@@ -29,15 +29,15 @@
             </tr>
             <tr>
                 <td>WS Hostname</td>
-                <td><input type="text" id="hostname"/></td>
+                <td><input type="text" id="hostname" value="desk" /></td>
             </tr>
             <tr>
                 <td>WS Port</td>
-                <td><input type="text" id="port"/></td>
+                <td><input type="text" id="port" value="8000"/></td>
             </tr>
             <tr>
                 <td>WS Endpoint</td>
-                <td><input type="text" id="endpoint"/></td>
+                <td><input type="text" id="endpoint" value="/"/></td>
             </tr>
             <tr>
                 <td></td>
