--- a/src/sfu/webRTCApp/index.html
+++ b/src/sfu/webRTCApp/index.html
@@ -162,6 +162,7 @@ hr.new4 {
         <fieldset id="fs_connection">
           
           <div><button id="btn_connect">Connect</button> </div>
+
         </fieldset>
 
 </td>
@@ -201,6 +202,36 @@ hr.new4 {
         <div id="chatDiv" style="overflow-y: auto; height:130px; ">
     
           <ul id="chatmessages"></ul>
+        </div>
+
+        <div id="container">
+
+
+            <section>
+              <div >
+                <form id="fileInfo">
+                  <input type="file" id="fileInput" name="files"/>
+                </form>
+                <button disabled id="sendFile">Send</button>
+                <button disabled id="abortButton">Abort</button>
+              </div>
+
+              <div class="progress">
+                <div class="label">Send progress: </div>
+                <progress id="sendProgress" max="0" value="0"></progress>
+              </div>
+
+              <div class="progress">
+                <div class="label">Receive progress: </div>
+                <progress id="receiveProgress" max="0" value="0"></progress>
+              </div>
+
+              <div id="bitrate"></div>
+              <a id="download"></a>
+              <span id="status"></span>
+
+            </section>
+
         </div>
 </td>
 </tr>
@@ -287,8 +318,6 @@ hr.new4 {
 
 
 
-
-
 </body>
 <script>
   // window.localStorage.setItem('debug', 'mediaserver-client:WARN* mediaserver-client:ERROR*');
@@ -302,5 +331,6 @@ hr.new4 {
 
   <script src="js/main.js" async  ></script>
   <script src="js/webrtc.js" async></script>
+
 
 </html>
