multi threaded tcp server with named pipe, which works well with windows

--- a/src/http/tests/index.html
+++ b/src/http/tests/index.html
@@ -31,7 +31,7 @@
             </tr>
             <tr>
                 <td>WS Hostname</td>
-                <td><input type="text" id="hostname" value="desk" /></td>
+                <td><input type="text" id="hostname" value="localhost" /></td>
             </tr>
             <tr>
                 <td>WS Port</td>
