under work, added mute

--- a/src/fmp4/main/index.html
+++ b/src/fmp4/main/index.html
@@ -15,5 +15,8 @@
             preload="auto">
             Your browser does not support the video tag.
         </video> 
+
+        <input type="checkbox" id="muteit" onclick="muteit()">
+
     </body>
     </html>
