--- a/src/fmp4/main/index.html
+++ b/src/fmp4/main/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div>
-        <input type="checkbox" name="muteme" id="muteit" onclick="muteit()" checked>
+        <input type="checkbox" name="muteme" id="muteit" onclick="muteit()" >
         <label for="muteme"> Mute it</label><br><br>
         </div>
 
