added two streams with different resolution

--- a/src/fmp4/main/index.html
+++ b/src/fmp4/main/index.html
@@ -86,7 +86,7 @@
                     </label>
                 </div>
                 <div id="muteaudiodiv">
-                    <div class="settings-text">Mute</div>
+                    <div class="settings-text">Mute Audio</div>
                     <label class="tgl-switch">
                         <input type="checkbox" id="muteaudio" onclick="muteit()">
                         <div class="tgl-slider"></div>
