replaced cif with sd resolution

--- a/src/fmp4/main/index.html
+++ b/src/fmp4/main/index.html
@@ -48,7 +48,7 @@
 					<label>Resolution
 					<select id="resolution">
 						<option value="hd"> 1280x720 </option> 
-						<option value="cif"> 800x640 </option> 
+						<option value="sd"> 800x640 </option> 
 					</select>
 					</label>
 					</fieldset>
