--- a/src/http/tests/index.html
+++ b/src/http/tests/index.html
@@ -24,8 +24,8 @@
                 <td width="200px">WS Protocol</td>
                 <td>
                     <select id="protocol">
-                        <option value="ws" selected="selected">ws</option>
-                        <option value="wss">wss</option>
+                        <option value="wss" selected="selected">wss</option>
+                        <option value="ws">ws</option>
                     </select>
                 </td>
             </tr>
