add multiple camera

--- a/src/rtsp/main/index.html
+++ b/src/rtsp/main/index.html
@@ -45,10 +45,10 @@
 					</fieldset>
 
 					<fieldset>
-					<label>Resolution
-					<select id="resolution">
-						<option value="hd"> 1280x720 </option> 
-						<option value="sd"> 800x640 </option> 
+					<label>Camera
+					<select id="camera">
+						<option value="rtsp://192.168.0.19:8554/testStream"> Camera Lab </option> 
+						<option value="rtsp://192.168.0.19:8554/testStream"> Camera Garden </option> 
 					</select>
 					</label>
 					</fieldset>
