added two pro-vigil cameras

--- a/src/rtsp/main/index.html
+++ b/src/rtsp/main/index.html
@@ -47,8 +47,8 @@
 					<fieldset>
 					<label>Camera
 					<select id="camera">
-						<option value="rtsp://192.168.0.19:8554/testStream"> Camera Lab </option> 
-						<option value="rtsp://192.168.0.19:8554/testStream"> Camera Garden </option> 
+						<option value="rtsp://root:60056006@10.86.8.16:606/axis-media/media.amp"> Camera Lab </option>
+						<option value="rtsp://root:60056006@10.86.8.16:559/axis-media/media.amp"> Camera Garden </option> 
 					</select>
 					</label>
 					</fieldset>
