test 4 cameras with negative test cases

--- a/src/rtsp/main/index.html
+++ b/src/rtsp/main/index.html
@@ -47,8 +47,10 @@
 					<fieldset>
 					<label>Camera
 					<select id="camera">
-						<option value="rtsp://root:60056006@10.86.8.16:606/axis-media/media.amp"> Camera Lab </option>
-						<option value="rtsp://root:60056006@10.86.8.16:559/axis-media/media.amp"> Camera Garden </option> 
+						<option value="rtsp://root:60056006@10.86.8.16:606/axis-media/media.amp"> US Camera Lab </option>
+						<option value="rtsp://root:60056006@10.86.8.16:559/axis-media/media.amp"> US Camera Garden </option> 
+						<option value="rtsp://localhost:8554/testStream"> Arvind Cam1 </option>
+						<option value="rtsp://localhost:9554/testStream"> Arvind Cam2 </option> 
 					</select>
 					</label>
 					</fieldset>
